// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-finalhandler should not return a body when using HEAD 1`] = `
Response {
  "$rawBody": null,
  "headers": Headers {
    "object": Object {
      "content-security-policy": "default-src 'self'",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 404,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`servie-finalhandler should return a 404 response 1`] = `
Response {
  "$rawBody": "Cannot GET /",
  "headers": Headers {
    "object": Object {
      "content-length": "12",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/plain",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 404,
  "statusText": "",
  "trailer": Promise {},
}
`;
